--- a/PAGES/demo.html
+++ b/PAGES/demo.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../css/dom-demo-styles.css">
-    <script src="../js/dom-demo.js" defer></script>
+    <link rel="stylesheet" href="../css/demo.css">
+    <script src="../js/demo.js" defer></script>
     <title>QuickShop</title>
 </head>
 
