--- a/PAGES/demo.html
+++ b/PAGES/demo.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="../css/demo.css">
-    <script src="../js/demo.js" defer></script>
+    >
     <title>QuickShop</title>
 </head>
 
@@ -18,7 +18,7 @@
     <button type="submit" onclick="handleClick()">Submit</button>
 
     <p id="resultHere">Display answer here</p>
-
+    <script src="../js/demo.js"></script
 </body>
 
 </html>
